// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-position prop 1`] = `
<button class="vm-button vm-button-md vm-button-nc">
  <!----> <i class="vm-icon vm-icon-plus vm-button-icon">
    <!---->
  </i>
</button>
`;

exports[`icon-prefix prop 1`] = `
<button class="vm-button vm-button-md vm-button-nc" iconprefix="my-icon"><i class="vm-icon vm-icon-success vm-button-icon">
    <!---->
  </i>
  <!---->
</button>
`;

exports[`loading slot 1`] = `
<button class="vm-button vm-button-loading vm-button-md vm-button-nc"><i class="vm-icon vm-button-icon">
    <!---->
  </i> <i class="vm-icon-spin vm-icon vm-icon-spinner">
    <!---->
  </i>
  <!---->
</button>
`;

exports[`loading-size prop 1`] = `
<button class="vm-button vm-button-loading vm-button-md vm-button-nc" loadingsize="10px"><i class="vm-icon vm-button-icon">
    <!---->
  </i> <i class="vm-icon-spin vm-icon vm-icon-spinner">
    <!---->
  </i>
  <!---->
</button>
`;
